crates/plotnik-lib/tests/02-parser/recovery_validation/named_def_missing_equals_recovers_to_next_def.txt
Broken ^^^
Valid = (ok)
==== diagnostics ====
error: references must be parenthesized
 --> query.ptk:1:1
  |
1 | Broken ^^^
  | ^^^^^^
  |
help: wrap in parentheses
  |
1 - Broken ^^^
1 + (Broken) ^^^
  |

error: expected a pattern
 --> query.ptk:1:8
  |
1 | Broken ^^^
  |        ^^^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
